--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,3 +12,12 @@ spring:
         url: jdbc:mysql://127.0.0.1:3306/ds1?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
         username: root
         password: Hys.103.103
+    tables:
+      user:
+        actualDataNodes: ds0.user0,ds0.user1,ds0.user2,ds1.user0,ds1.user1,ds1.user2
+        datasourceStrategy:
+          shardingColumn: id
+          algorithmExpression: ds${id % 2}
+        tableStrategy:
+          shardingColumn: id
+          algorithmExpression: user${id % 3}
