test multiple test

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,3 +21,11 @@ spring:
         tableStrategy:
           shardingColumn: id
           algorithmExpression: user${id % 3}
+      t_order:
+        actualDataNodes: ds0.t_order0,ds0.t_order1,ds1.t_order0,ds1.t_order1
+        datasourceStrategy:
+          shardingColumn: id
+          algorithmExpression: ds${id % 2}
+        tableStrategy:
+          shardingColumn: uid
+          algorithmExpression: t_order${uid % 2}
